# trg555

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.nix
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PROJECT_TEMPLATE.md  pull_request_template.md
TRG.fin/: .env.example  drizzle.config.ts  netlify.toml  package-lock.json  package.json  simple-server.js  test.js  tsconfig.json
attached_assets/: Pasted--BACKEND-server-py-import-heapq-from-sortedcontai-1739279046121.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conte-1739264152605.txt  Pasted--MarketDashboard-js-import-React-useEffect-useState-from-react-import-RSSParser-from-r-1739276719878.txt  Pasted--TradingView-Widget-BEGIN-div-class-tradingview-widget-container-div-class-tradingvi-1739282581005.txt  Pasted--UltraProTradingPage-js-import-React-useState-useEffect-from-react-export-default-fun-1739277809815.txt  Pasted-1-src-App-js-jsx-Copy-Edit-import-React-from-react-import-BrowserRouter-as-Router-Routes-Rou-1739261545050.txt  Pasted-Features-Username-only-login-no-passwords-no-email-Simulated-wallet-100-000-starting-balanc-1739272980582.txt  Pasted-Integrating-feature-Integrating-a-dynamic-feature-that-extracts-data-from-the-selected-stock-and-pr-1739271764372.txt  Pasted-Okay-the-user-is-asking-about-intraday-live-charts-with-pattern-candlesticks-and-animation-Let-me--1739325491288.txt  Pasted-import-React-useState-useEffect-from-react-import-styled-from-styled-components--1739272696632.txt  (+8 more)
(+199 files in other folders)
